@@ -5,7 +5,7 @@
 .typeahead:focus {border:2px solid #0097cf;}
 .tt-hint {color:#999;}
 .tt-menu {width:100%; margin:12px 0; padding:8px 0; background-color:#fff;max-height:320px; overflow-y:auto;}
-.tt-suggestion {padding:3px 20px; font-size:18px; line-height:24px;}
+.tt-suggestion {padding:3px 20px; font-size:18px;}
 .tt-suggestion:hover {cursor:pointer; color:#fff; background-color:#0097cf;}
 .tt-suggestion.tt-cursor {color:#fff; background-color:#0097cf;}
 .tt-suggestion p {margin:0;}
@@ -18,3 +18,5 @@ input#view_search_string, input.typeahead.tt-hint		{font-size:32px; width:936px;
 
 .search .chosen-container{width:300px;min-width:300px;max-width:300px;}
 select.chosen			{width:300px;min-width:300px;max-width:300px;}
+
+.tt-menu img			{width:16px; height:16px;}
