@@ -18,7 +18,7 @@
 <div id="view_search_test">
 
 <div class="search">
-	<div class="search_label"><img src="{art}search_recipient.png" alt="Recipient icon" width="13" height="13"/>RECIPIENT</div>
+	<div class="search_label"><img src="{art}search_country.png" alt="Recipient icon" width="13" height="13"/>RECIPIENT</div>
 <select id="view_search_select_country" class="chosen">
 	<option value></option>
 	{search_options_country}
@@ -36,7 +36,7 @@
 	{search_options_sector}
 </select>
 </div><div class="search">
-	<div class="search_label"><img src="{art}search_sector_cat.png" alt="Sector Category icon" width="13" height="13"/>SECTOR CATEGORY</div>
+	<div class="search_label"><img src="{art}search_category.png" alt="Sector Category icon" width="13" height="13"/>SECTOR CATEGORY</div>
 <select id="view_search_select_category" class="chosen">
 	<option value></option>
 	{search_options_category}
