@@ -5,6 +5,7 @@ Added labels to search
 Clean up CSS for Search
 Added icons for Search and labels
 Added translation for Change Settings text
+Added icons to Search dropdown
 
 
 Development Portal (2015-06-18 shi)
